--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -22,33 +22,12 @@
                     @Html.ActionLink("Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-12" })
                     @Html.ActionLink("Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-6" })
 
-                    <button id="@restaurant.RestaurantId" class="btn btn-secondary col-6 restaurant-chat">Chat</button>
+                    <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName"class="btn btn-secondary col-6 restaurant-chat">Chat</button>
                 </div>
             </div>
         </div>
     }
 </div>
-
-@*<div class="row">
-    <div class="col-md-2 card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="border-width:5px;">
-        <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
-            <div class="row">
-                <p class="col-10  mb-0 mr-auto ml-2">Compamy Name</p>
-                <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        </div>
-        <div class="card-body bg-light border-success">
-            <textarea id="messages" class="form-control"></textarea>
-             <br/>
-            <input id="message" class="form-control border border-success">
-            <button id="send" class="btn btn-success mt-1 mx-auto" type="button" aria-expanded="false">
-                Send
-            </button>
-        </div>
-    </div>
-</div>*@
 
 @section scripts {
 
@@ -64,7 +43,7 @@
                         <div class="card shadow-lg border border-success p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:250px;">
                             <div class="card-header border-dark font-weight-bolder bg-success text-white text-center">
                                 <div class="row">
-                                    <p class="col-10 mb-0 mr-auto ml-2">Compamy Name</p>
+                                    <p class="col-10 mb-0 mr-auto ml-2">${e.target.getAttribute('data-company')}</p>
                                     <button type="button" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
