--- a/PiniT/Views/Restaurants/Edit.cshtml
+++ b/PiniT/Views/Restaurants/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PiniT.Models.Restaurant
+﻿@model PiniT.ViewModels.CreateRestaurantVM
 
 @{
     ViewBag.Title = "Edit";
@@ -15,24 +15,29 @@
         <h4>Restaurant</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.RestaurantId)
+        @Html.HiddenFor(model => model.Restaurant.RestaurantId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Restaurant.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Restaurant.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Restaurant.CompanyName, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.VAT, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Restaurant.VAT, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.VAT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.VAT, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Restaurant.VAT, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Restaurant.VAT, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.Restaurant.Type, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.ListBoxFor(model => model.SelectedTypes, Model.Types)
+                @Html.ValidationMessageFor(model => model.Restaurant.Type, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
